// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-jest-preset should return correct preset 1`] = `
{
  "transform": {
    "^.+\\.tsx?$": "ts-jest/legacy",
  },
}
`;

exports[`create-jest-preset should return correct preset 2`] = `
{
  "transform": {
    "^.+\\.tsx?$": "ts-jest",
  },
}
`;

exports[`create-jest-preset should return correct preset 3`] = `
{
  "transform": {
    "^.+\\.[tj]sx?$": "ts-jest/legacy",
  },
}
`;

exports[`create-jest-preset should return correct preset 4`] = `
{
  "transform": {
    "^.+\\.[tj]sx?$": "ts-jest",
  },
}
`;

exports[`create-jest-preset should return correct preset 5`] = `
{
  "transform": {
    "^.+\\.tsx?$": "ts-jest/legacy",
  },
}
`;

exports[`create-jest-preset should return correct preset 6`] = `
{
  "moduleFileExtensions": [
    "bar",
  ],
  "testMatch": [
    "foo",
  ],
  "transform": {
    "^.+\\.tsx?$": "ts-jest",
    "foo": "bar",
  },
}
`;

exports[`create-jest-preset should return correct preset 7`] = `
{
  "extensionsToTreatAsEsm": [
    ".jsx",
    ".ts",
    ".tsx",
    ".mts",
  ],
  "moduleFileExtensions": [
    "bar",
  ],
  "testMatch": [
    "foo",
  ],
  "transform": {
    "^.+\\.m?[tj]sx?$": "ts-jest/legacy",
    "foo": "bar",
  },
}
`;
